--- a/csASPNETSudoku3_1/csASPNETSudoku3_1.csproj
+++ b/csASPNETSudoku3_1/csASPNETSudoku3_1.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="jQuery" Version="3.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.24" />
     <PackageReference Include="MySql.Data" Version="8.0.29" />
   </ItemGroup>
