--- a/csASPNETSudoku3_1/csASPNETSudoku3_1.csproj
+++ b/csASPNETSudoku3_1/csASPNETSudoku3_1.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="jQuery" Version="3.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.24" />
     <PackageReference Include="MySql.Data" Version="8.0.29" />
+    <PackageReference Include="Npgsql" Version="6.0.5" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
   </ItemGroup>
 
 </Project>
